--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
     <a href="#">Projects</a>
     <a href="#">Contact</a>
     <br><br><br><br>
-    <i class="fa-brands fa-github" style="margin-left: 10%; font-size: xxx-large; color: white;"></i>
-    <i class="fa-brands fa-linkedin" style="margin-left: 10%; font-size: xxx-large; color: white;"></i>
+    <div class="row">
+        <div class="column">
+            <a href="https://github.com/karan0550
+" target="_blank"><i class="fa-brands fa-github" style="font-size: xxx-large; color: white;"></i></a>
+        </div>
+        <div class="column">
+            <a href="https://www.linkedin.com/in/karan-sharma-50a9161ab
+" target="_blank"><i class="fa-brands fa-linkedin" style="font-size: xxx-large; color: white;"></i></a>
+        </div>
+    </div>
 </div>
 
 <div id="main">
@@ -66,19 +74,6 @@
 
         </div>
     </div>
-<!--    <div class="row">-->
-<!--        <div class="column left" style="background-color:#FBEAEB;">-->
-<!--            <h2>Column 1</h2>-->
-<!--            <p>Some text..</p>-->
-<!--        </div>-->
-<!--        <div class="column right" style="background-color:#2F3C7E; color: white; text-align: center;">-->
-<!--            <h2>Column 2</h2>-->
-<!--            <p>Karan Sharma</p>-->
-<!--            <p>IT Innovation and Design Program</p>-->
-<!--            <p>Conestoga College</p>-->
-<!--            <p>*Insert Nice Bio Here*</p>-->
-<!--        </div>-->
-<!--    </div>-->
 </div>
 
 
