--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="#">Projects</a>
-    <a href="#">Contact</a>
+    <a href="projects.html">Projects</a>
+    <a href="contact.html">Contact</a>
     <br><br><br><br>
     <div class="row">
         <div class="column">
@@ -52,14 +52,14 @@
                     </div>
                 </div>
             </div>
-            <div style="background-color: white; padding: 50px;">
+            <div style="background-color: white; padding: 50px; position: sticky;">
                 <h2>Experience</h2>
                 <hr>
-                <ul class="timeline">
-                    <li data-year="06-2020" data-text="Harvey's Associate"></li>
-                    <li data-year="05-2021" data-text="eLearning Courseware Developer at Conestoga College"></li>
-                    <li data-year="01-2022" data-text="Backend Developer at Royal Distributing"></li>
-                    <li data-year="05-2022" data-text="eLearning Courseware Developer at Conestoga College"></li>
+                <ul class="timeline" style="top:160%; left: 50%;">
+                    <li data-year="2020" data-text="Harvey's Associate"></li>
+                    <li data-year="2021" data-text="eLearning Courseware Developer at Conestoga College"></li>
+                    <li data-year="2022" data-text="Backend Developer at Royal Distributing"></li>
+                    <li data-year="2022" data-text="eLearning Courseware Developer at Conestoga College"></li>
                 </ul>
             </div>
         </div>
