Fonts and Description Updates

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">☰</a><!-- × -->
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
     <br><br><br><br>
@@ -32,21 +32,23 @@
         <div class="column left">
             <div style="background-color: #FBEAEB; padding: 50px;">
                 <h2>Skills</h2>
+                <p>These are the skills I've learnt from my college and work, and I am always excited to
+                learn and add more skills to the list. Check out what I can do below:</p>
                 <hr>
                 <div class="row" style="display: flex; align-items: center; justify-content: center;">
-                    <div class="column" style="text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
+                    <div class="column" style="background-color: #D9D9D9; text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
                         <div><i class="fa fa-laptop-code" style="font-size: xxx-large"></i></div>
                         <p>C#, Java, Python</p>
                     </div>
-                    <div class="column" style="text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
+                    <div class="column" style="background-color: #D9D9D9; text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
                         <div><i class="fa-brands fa-react" style="font-size: xxx-large"></i></div>
                         <p>React, Bootstrap, Angular</p>
                     </div>
-                    <div class="column" style="text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
+                    <div class="column" style="background-color: #D9D9D9; text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
                         <div><i class="fa fa-database" style="font-size: xxx-large"></i></div>
                         <p>MySQL,MSSQL, MS Access, NoSQL</p>
                     </div>
-                    <div class="column" style="text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
+                    <div class="column" style="background-color: #D9D9D9; text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
                         <div><i class="fa-brands fa-git-alt" style="font-size: xxx-large"></i></div>
                         <p>Git, Trello, Toybox, Adobe</p>
                     </div>
@@ -54,6 +56,8 @@
             </div>
             <div style="background-color: white; padding: 50px; position: sticky;">
                 <h2>Experience</h2>
+                <p>My co-op had a lot to offer! From working with talented people and learning to putting my skills to work,
+                 and more. Check out my wonderful journey below:</p>
                 <hr>
                 <ul class="timeline" style="top:160%; left: 50%;">
                     <li data-year="2020" data-text="Harvey's Associate"></li>
