Nav menu; added icons

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
 
 <div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark"></i></a>
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
     <br><br><br><br>
@@ -26,8 +26,8 @@
 </div>
 
 <div id="main">
-
-    <button class="openbtn" onclick="openNav()">☰</button>
+<!-- ☰ × -->
+    <button class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars"></i></button>
     <div class="row">
         <div class="column left">
             <div style="background-color: #FBEAEB; padding: 50px;">
