--- a/index.html
+++ b/index.html
@@ -46,26 +46,26 @@
 
             </div>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8 col-sm-12">
                     <div style="background-color: #FBEAEB; padding: 50px;">
                         <h2>Skills</h2>
                         <p>These are the skills I've learnt from my college and work, and I am always excited to
                             learn and add more skills to the list. Check out what I can do below:</p>
                         <hr>
                         <div class="row" style="display: flex; align-items: center; justify-content: center;">
-                            <div class="col-md-3" style="background-color: #D9D9D9; text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
+                            <div class="col-md-2 pt-3 m-4" style="background-color: #D9D9D9; text-align: center; border: 1px solid black;  border-radius: 5%;">
                                 <div><i class="fa fa-laptop-code" style="font-size: xxx-large"></i></div>
                                 <p>C#, Java, Python</p>
                             </div>
-                            <div class="col-md-3" style="background-color: #D9D9D9; text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
+                            <div class="col-md-2 pt-3 m-4" style="background-color: #D9D9D9; text-align: center; border: 1px solid black;  border-radius: 5%;">
                                 <div><i class="fa-brands fa-react" style="font-size: xxx-large"></i></div>
                                 <p>React, Bootstrap, Angular</p>
                             </div>
-                            <div class="col-md-3" style="background-color: #D9D9D9; text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
+                            <div class="col-md-2 pt-3 m-4" style="background-color: #D9D9D9; text-align: center; border: 1px solid black;  border-radius: 5%;">
                                 <div><i class="fa fa-database" style="font-size: xxx-large"></i></div>
-                                <p>MySQL,MSSQL, MS Access, NoSQL</p>
+                                <p>MySQL, MSSQL, MS Access,</p>
                             </div>
-                            <div class="col-md-3" style="background-color: #D9D9D9; text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
+                            <div class="col-md-2 pt-3 m-4" style="background-color: #D9D9D9; text-align: center; border: 1px solid black;  border-radius: 5%;">
                                 <div><i class="fa-brands fa-git-alt" style="font-size: xxx-large"></i></div>
                                 <p>Git, Trello, Toybox, Adobe</p>
                             </div>
@@ -112,18 +112,6 @@
                             <!-- end card -->
                         </div>
                     </div>
-                    <!-- <div style="background-color: white; padding: 50px; position: sticky;">
-                        <h2>Experience</h2>
-                        <p>My co-op had a lot to offer! From working with talented people and learning to putting my skills to work,
-                         and more. Check out my wonderful journey below:</p>
-                        <hr>
-                        <ul class="timeline" style="top:135%; left: 50%;">
-                            <li data-year="2020" data-text="Harvey's Associate"></li>
-                            <li data-year="2021" data-text="eLearning Courseware Developer at Conestoga College"></li>
-                            <li data-year="2022" data-text="Backend Developer at Royal Distributing"></li>
-                            <li data-year="2022" data-text="eLearning Courseware Developer at Conestoga College"></li>
-                        </ul>
-                    </div> -->
                 </div>
                 <div class="col-md-4 col-sm-12 right">
                     <img src="img/MyPic.png" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
