--- a/contact.html
+++ b/contact.html
@@ -27,29 +27,47 @@
     </div>
 </div>
 
-<div id="main">
+<div id="container-fluid">
 <!-- ☰ × -->
     <button class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars"></i></button>
-    <div class="row">
-        <div class="column left">
-            <div style="background-color: #FBEAEB; padding: 50px;">
-                <iframe style="margin: 0 auto; display: block" src="https://docs.google.com/forms/d/e/1FAIpQLSdan3Zk-iJSG5qOZT6zXs7PRFcw5hM6uqDqe-iUk6OyhjoUdg/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-            </div>
-        </div>
-        <div class="column right">
-            <img src="img/MyPic.png" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
-            <div style="margin-top: 10%;">
-                <p>Karan Sharma</p>
-                <p>IT Innovation and Design Program</p>
-                <p>Conestoga College</p>
-                <p>Hi! Welcome to my Web Portfolio academic assignment for INFO3130. I am an IT Innovation and Design student at Conestoga College. I love creating interactive, usable, accessible and cool websites, and I also love to code and these interests led me to become a Developer.</p>
-            </div>
+    <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-12">
+            <div class="display-ph">
+                <img src="img/MyPic.png" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
+                <div style="margin-top: 10%;">
+                    <h2>Karan Sharma's Portfolio 2.0</h2>
+                    <p>Hi! My name is Karan Sharma and
+                        welcome to my Web Portfolio academic assignment for INFO3130.
+                        I am an IT Innovation and Design student at Conestoga College.
+                        I love creating interactive, usable, accessible and cool websites,
+                        and I also love to code and these interests led me to become a Developer.</p>
+                </div>
 
+
+            </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <div style="background-color: #FBEAEB; padding: 50px;">
+                        <iframe style="margin: 0 auto; display: block;" src="https://docs.google.com/forms/d/e/1FAIpQLSdan3Zk-iJSG5qOZT6zXs7PRFcw5hM6uqDqe-iUk6OyhjoUdg/viewform?embedded=true" width="350" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    </div>
+                </div>
+                <div class="col-md-4 right">
+                    <img src="img/MyPic.png" class="img-responsive" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
+                    <hr>
+                    <div style="margin-top: 10%;">
+                        <p>Karan Sharma</p>
+                        <p>IT Innovation and Design Program</p>
+                        <p>Conestoga College</p>
+                        <p>Hi! Welcome to my Web Portfolio academic assignment for INFO3130. I am an IT Innovation and Design student at Conestoga College. I love creating interactive, usable, accessible and cool websites, and I also love to code and these interests led me to become a Developer.</p>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </div>
 </div>
 <footer>
-    <p>&copy; Copyright Karan Sharma; Portfolio 2.0.</p>
+    <p class="m-4">&copy; Copyright Karan Sharma; Portfolio 2.0.</p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
