--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12 right">
-                    <img src="img/MyPic.png" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
+                    <img src="img/MyPic.png" class="img-responsive" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
+                    <hr>
                     <div style="margin-top: 10%;">
                         <p>Karan Sharma</p>
                         <p>IT Innovation and Design Program</p>
