--- a/projects.html
+++ b/projects.html
@@ -27,47 +27,66 @@
   </div>
 </div>
 
-<div id="main">
+<div id="container-fluid">
 
   <button class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars"></i></button>
-  <div class="row">
-    <div class="column left">
-      <div style="background-color: #FBEAEB; padding: 50px;">
-        <h2>Projects</h2>
-        <hr>
-        <div class="row" style="display: flex; align-items: center; justify-content: center;">
-          <div class="column" style="text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
-              <img src="img/destinationEarth.png" alt="" width="300">
-              <p><a href="https://github.com/karan0550/destinationEarthGame">Destination Earth</a></p>
-          </div>
-          <div class="column" style="text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
-              <img src="img/jquery-mobile.jpg" alt="" width="300">
-              <p><a href="https://github.com/karan0550/QGameComplete">QGame</a></p>
-          </div>
+  <div class="row justify-content-center">
+    <div class="col-md-10 col-sm-12">
+      <div class="col-sm-12 display-ph">
+        <img src="img/MyPic.png" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
+        <div style="margin-top: 10%;">
+          <h2>Karan Sharma's Portfolio 2.0</h2>
+          <p>Hi! My name is Karan Sharma and
+            welcome to my Web Portfolio academic assignment for INFO3130.
+            I am an IT Innovation and Design student at Conestoga College.
+            I love creating interactive, usable, accessible and cool websites,
+            and I also love to code and these interests led me to become a Developer.</p>
         </div>
-        <div class="row" style="display: flex; align-items: center; justify-content: center;">
-          <div class="column" style="text-align: center; border: 1px solid black; margin: 4px; border-radius: 5%;">
-              <img src="img/QGame.png" alt="" width="300">
-              <p><a href="https://github.com/karan0550/mobileApplicationProject">JQuery Mobile Project</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="column right">
-      <img src="img/MyPic.png" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
-      <div style="margin-top: 10%;">
-        <p>Karan Sharma</p>
-        <p>IT Innovation and Design Program</p>
-        <p>Conestoga College</p>
-        <p>Hi! Welcome to my Web Portfolio academic assignment for INFO3130. I am an IT Innovation and Design student at Conestoga College. I love creating interactive, usable, accessible and cool websites, and I also love to code and these interests led me to become a Developer.</p>
-      </div>
 
+
+      </div>
+      <div class="row">
+        <div class="col-md-8 col-sm-12">
+          <div style="background-color: #FBEAEB; padding: 50px;">
+            <h2>Projects</h2>
+            <hr>
+            <div class="row d-flex justify-content-center align-items-center">
+              <div class="col-md-4" style="text-align: center; background-color: #D9D9D9; margin: 4px; border-radius: 5%;">
+                <img src="img/destinationEarth.png" alt="" width="300">
+                <p><a href="https://github.com/karan0550/destinationEarthGame">Destination Earth</a></p>
+              </div>
+              <div class="col-md-4" style="text-align: center; background-color: #D9D9D9; margin: 4px; border-radius: 5%;">
+                <img src="img/jquery-mobile.jpg" alt="" width="300">
+                <p><a href="https://github.com/karan0550/QGameComplete">QGame</a></p>
+              </div>
+            </div>
+            <div class="row" style="display: flex; align-items: center; justify-content: center;">
+              <div class="col-md-4" style="text-align: center; background-color: #D9D9D9; margin: 4px; border-radius: 5%;">
+                <img src="img/QGame.png" alt="" width="300">
+                <p><a href="https://github.com/karan0550/mobileApplicationProject">JQuery Mobile Project</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-12 right">
+          <img src="img/MyPic.png" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
+          <hr>
+          <div style="margin-top: 10%;">
+            <p>Karan Sharma</p>
+            <p>IT Innovation and Design Program</p>
+            <p>Conestoga College</p>
+            <p>Hi! Welcome to my Web Portfolio academic assignment for INFO3130. I am an IT Innovation and Design student at Conestoga College. I love creating interactive, usable, accessible and cool websites, and I also love to code and these interests led me to become a Developer.</p>
+          </div>
+
+        </div>
+      </div>
     </div>
+
   </div>
+  <footer>
+    <p class="m-4">&copy; Copyright Karan Sharma; Portfolio 2.0.</p>
+  </footer>
 </div>
-<footer>
-  <p>&copy; Copyright Karan Sharma; Portfolio 2.0.</p>
-</footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
