--- a/projects.html
+++ b/projects.html
@@ -71,9 +71,9 @@
         <div class="col-md-4 col-sm-12 right">
           <img src="img/MyPic.png" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
           <hr>
-          <div style="margin-top: 10%;">
-            <p>Karan Sharma</p>
-            <p>IT Innovation and Design Program</p>
+          <div class="mb-2">
+            <h2 class="mb-2">Karan Sharma</h2>
+            <p>IT Innovation and Design</p>
             <p>Conestoga College</p>
             <p>Hi! Welcome to my Web Portfolio academic assignment for INFO3130. I am an IT Innovation and Design student at Conestoga College. I love creating interactive, usable, accessible and cool websites, and I also love to code and these interests led me to become a Developer.</p>
           </div>
