--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Karan's Portfolio 2.0</title>
      <!-- Bootstrap CSS -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/ac65beec67.js" crossorigin="anonymous"></script>
@@ -11,7 +12,7 @@
 <body>
 
 <div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark"></i></a>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark"><span class="d-none">Close</span></i></a>
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
     <br><br><br><br>
@@ -27,9 +28,9 @@
     </div>
 </div>
 
-<div id="container-fluid">
+<div id="container-fluid" role="main">
 
-    <button class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars"></i></button>
+    <button class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars">&nbsp; Menu</i></button>
     <div class="row justify-content-center">
         <div class="col-md-10 col-sm-12">
             <div class="display-ph">
@@ -83,24 +84,24 @@
                                         <ul class="list-inline events">
                                             <li class="list-inline-item event-list">
                                                 <div class="px-4">
-                                                    <div class="event-date bg-soft-success text-success">May 2021</div>
-                                                    <h5 class="font-size-16">eLearning Courseware Developer-Conestoga College</h5>
+                                                    <div class="event-date bg-soft-success text-black"><strong>May 2021</strong></div>
+                                                    <p class="font-size-16">eLearning Courseware Developer-Conestoga College</p>
                                                     <p class="text-muted">Technologies used: Bootstrap 4, HTML5, CSS3, Javascript, Git, WinSCP</p>
 
                                                 </div>
                                             </li>
                                             <li class="list-inline-item event-list">
                                                 <div class="px-4">
-                                                    <div class="event-date bg-soft-danger text-danger">January 2022</div>
-                                                    <h5 class="font-size-16">Backend Developer-Royal Distributing</h5>
+                                                    <div class="event-date bg-soft-danger text-black"><strong>January 2022</strong></div>
+                                                    <p class="font-size-16">Backend Developer-Royal Distributing</p>
                                                     <p class="text-muted">Technologies used: C#, SQL, FoxPro, Visual Studio, Asp.Net, Git, Microsoft 365 Business Central AL</p>
 
                                                 </div>
                                             </li>
                                             <li class="list-inline-item event-list">
                                                 <div class="px-4">
-                                                    <div class="event-date bg-soft-warning text-warning">May 2022</div>
-                                                    <h5 class="font-size-16">eLearning Courseware Developer-Conestoga College</h5>
+                                                    <div class="event-date bg-soft-warning text-black"><strong>May 2022</strong></div>
+                                                    <p class="font-size-16">eLearning Courseware Developer-Conestoga College</p>
                                                     <p class="text-muted">Technologies used: Bootstrap 5, HTML5, CSS3, Javascript, Git, WinSCP</p>
 
                                                 </div>
@@ -117,7 +118,7 @@
                     <img src="img/MyPic.png" class="img-responsive" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
                     <hr>
                     <div class="mb-2">
-                        <h2 class="mb-2">Karan Sharma</h2>
+                        <h1 class="mb-2">Karan Sharma</h1>
                         <p>IT Innovation and Design</p>
                         <p>Conestoga College</p>
                         <p>Hi! Welcome to my Web Portfolio academic assignment for INFO3130. I am an IT Innovation and Design student at Conestoga College. I love creating interactive, usable, accessible and cool websites, and I also love to code and these interests led me to become a Developer.</p>
