--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact</title>
@@ -12,7 +12,7 @@
 <body>
 
 <div id="mySidebar" class="sidebar" role="navigation">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark"><span class="d-none">Close</span></i></a>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark">Close</i></a>
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
     <br><br><br><br>
