--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Karan's Portfolio 2.0</title>
@@ -12,9 +12,9 @@
 <body>
 
 <div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark"><span class="d-none">Close</span></i></a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
+    <a href="javascript:void(0)" role="navigation" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark">Close</i></a>
+    <a href="projects.html" role="navigation">Projects</a>
+    <a href="contact.html" role="navigation">Contact</a>
     <br><br><br><br>
     <div class="row">
         <div class="column">
