--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <body>
 
 <div id="mySidebar" class="sidebar">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark"><span class="d-none">Close</span></i></a>
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark">Close</i></a>
   <a href="index.html">Home</a>
   <a href="contact.html">Contact</a>
   <br><br><br><br>
