--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
 <div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" tabindex="0" label="navigation" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark"></i></a>
-    <a href="projects.html" role="Projects">Projects</a>
-    <a href="contact.html" role="Contact">Contact</a>
+    <a href="javascript:void(0)" tabindex="0" aria-label="navigation" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark"></i></a>
+    <a href="projects.html" aria-label="Projects">Projects</a>
+    <a href="contact.html" aria-label="Contact">Contact</a>
     <br><br><br><br>
     <div class="row">
         <div class="column">
