--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div id="mySidebar" class="sidebar">
+<div id="mySidebar" role="side-bar" class="sidebar">
     <a href="javascript:void(0)" tabindex="0" aria-label="navigation" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark"></i></a>
     <a href="projects.html" aria-label="Projects">Projects</a>
     <a href="contact.html" aria-label="Contact">Contact</a>
@@ -19,11 +19,11 @@
     <div class="row">
         <div class="column">
             <a href="https://github.com/karan0550
-" target="_blank"><i class="fa-brands fa-github" style="font-size: xxx-large; color: white;"></i></a>
+" target="_blank" aria-label="Github"><i class="fa-brands fa-github" style="font-size: xxx-large; color: white;"></i></a>
         </div>
         <div class="column">
             <a href="https://www.linkedin.com/in/karan-sharma-50a9161ab
-" target="_blank"><i class="fa-brands fa-linkedin" style="font-size: xxx-large; color: white;"></i></a>
+" target="_blank" aria-label="Linkedin"><i class="fa-brands fa-linkedin" style="font-size: xxx-large; color: white;"></i></a>
         </div>
     </div>
 </div>
