--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div id="mySidebar" role="side-bar" class="sidebar">
+<div id="mySidebar" role="navigation" class="sidebar">
     <a href="javascript:void(0)" tabindex="0" aria-label="navigation" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark"></i></a>
     <a href="projects.html" aria-label="Projects">Projects</a>
     <a href="contact.html" aria-label="Contact">Contact</a>
@@ -33,7 +33,7 @@
     <button class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars">&nbsp; Menu</i></button>
     <div class="row justify-content-center">
         <div class="col-md-10 col-sm-12">
-            <div class="display-ph">
+            <div class="display-ph" role="banner">
                 <img src="img/MyPic.png" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
                 <div style="margin-top: 10%;">
                     <h2>Karan Sharma's Portfolio 2.0</h2>
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12 right">
+                <div class="col-md-4 col-sm-12 right" role="banner">
                     <img src="img/MyPic.png" class="img-responsive" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
                     <hr>
                     <div class="mb-2">
@@ -130,7 +130,7 @@
     </div>
 
 </div>
-<footer>
+<footer role="contentinfo">
     <p class="m-4">&copy; Copyright Karan Sharma; Portfolio 2.0.</p>
 </footer>
 
