--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12 right" role="banner">
+                <div class="col-md-4 col-sm-12 right">
                     <img src="img/MyPic.png" class="img-responsive" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
                     <hr>
                     <div class="mb-2">
