--- a/projects.html
+++ b/projects.html
@@ -11,19 +11,19 @@
 </head>
 <body>
 
-<div id="mySidebar" class="sidebar">
+<div id="mySidebar" role="navigation" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-sharp fa-solid fa-xmark">Close</i></a>
-  <a href="index.html">Home</a>
-  <a href="contact.html">Contact</a>
+  <a href="index.html" aria-label="Home">Home</a>
+  <a href="contact.html" aria-label="Contact">Contact</a>
   <br><br><br><br>
   <div class="row">
     <div class="column">
       <a href="https://github.com/karan0550
-" target="_blank"><i class="fa-brands fa-github" style="font-size: xxx-large; color: white;"></i></a>
+" target="_blank" aria-label="Github"><i class="fa-brands fa-github" style="font-size: xxx-large; color: white;"></i></a>
     </div>
     <div class="column">
       <a href="https://www.linkedin.com/in/karan-sharma-50a9161ab
-" target="_blank"><i class="fa-brands fa-linkedin" style="font-size: xxx-large; color: white;"></i></a>
+" target="_blank" aria-label="LinkedIn"><i class="fa-brands fa-linkedin" style="font-size: xxx-large; color: white;"></i></a>
     </div>
   </div>
 </div>
@@ -33,7 +33,7 @@
   <button class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars">&nbsp; Menu</i></button>
   <div class="row justify-content-center">
     <div class="col-md-10 col-sm-12">
-      <div class="col-sm-12 display-ph">
+      <div class="col-sm-12 display-ph" role="banner">
         <img src="img/MyPic.png" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
         <div style="margin-top: 10%;">
           <h2>Karan Sharma's Portfolio 2.0</h2>
