--- a/projects.html
+++ b/projects.html
@@ -51,21 +51,19 @@
           <div style="background-color: #FBEAEB; padding: 50px;">
             <h2>Projects</h2>
             <hr>
-            <div class="row d-flex justify-content-center align-items-center">
-              <div class="col-md-4" style="text-align: center; background-color: #D9D9D9; margin: 4px; border-radius: 5%;">
-                <img src="img/destinationEarth.png" alt="" width="300">
+            <div class="row">
+              <div class="col-sm-12 mt-2 p-3" style="text-align: center; background-color: #D9D9D9; border-radius: 5%;">
+                <img src="img/destinationEarth.png" alt="" class="img-fluid">
                 <p><a href="https://github.com/karan0550/destinationEarthGame">Destination Earth</a></p>
               </div>
-              <div class="col-md-4" style="text-align: center; background-color: #D9D9D9; margin: 4px; border-radius: 5%;">
-                <img src="img/jquery-mobile.jpg" alt="" width="300">
+              <div class="col-sm-12 mt-2 p-3" style="text-align: center; background-color: #D9D9D9; border-radius: 5%;">
+                <img src="img/jquery-mobile.jpg" alt="" class="img-fluid">
                 <p><a href="https://github.com/karan0550/QGameComplete">QGame</a></p>
               </div>
             </div>
-            <div class="row" style="display: flex; align-items: center; justify-content: center;">
-              <div class="col-md-4" style="text-align: center; background-color: #D9D9D9; margin: 4px; border-radius: 5%;">
-                <img src="img/QGame.png" alt="" width="300">
-                <p><a href="https://github.com/karan0550/mobileApplicationProject">JQuery Mobile Project</a></p>
-              </div>
+            <div class="col-sm-12 mt-2 p-3" style="text-align: center; background-color: #D9D9D9; border-radius: 5%;">
+              <img src="img/QGame.png" alt="" class="img-fluid">
+              <p><a href="https://github.com/karan0550/mobileApplicationProject">JQuery Mobile Project</a></p>
             </div>
           </div>
         </div>
