--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <script src="https://kit.fontawesome.com/ac65beec67.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
@@ -17,11 +18,11 @@
     <a href="projects.html" aria-label="Projects">Projects</a>
     <br><br><br><br>
     <div class="row">
-        <div class="column">
+        <div class="col-3">
             <a href="https://github.com/karan0550
 " target="_blank" aria-label="Github"><i class="fa-brands fa-github" style="font-size: xxx-large; color: white;"></i></a>
         </div>
-        <div class="column">
+        <div class="col-3">
             <a href="https://www.linkedin.com/in/karan-sharma-50a9161ab
 " target="_blank" aria-label="LinkedIn"><i class="fa-brands fa-linkedin" style="font-size: xxx-large; color: white;"></i></a>
         </div>
@@ -32,7 +33,7 @@
 <!-- ☰ × -->
     <button class="openbtn" onclick="openNav()" role="navigation"><i class="fa-solid fa-bars">&nbsp; Menu</i></button>
     <div class="row justify-content-center">
-        <div class="col-md-10 col-sm-12">
+        <div class="col-md-10 col-sm-12 offset-md-1">
             <div class="display-ph" role="banner">
                 <img src="img/MyPic.png" alt="Avatar Logo" style="width:200px; margin-top: 20%;">
                 <div style="margin-top: 10%;">
@@ -47,7 +48,7 @@
 
             </div>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8 col-sm-12 offset-md-1">
                     <div style="background-color: #FBEAEB; padding: 50px;">
                         <iframe style="margin: 0 auto; display: block;" src="https://docs.google.com/forms/d/e/1FAIpQLSdan3Zk-iJSG5qOZT6zXs7PRFcw5hM6uqDqe-iUk6OyhjoUdg/viewform?embedded=true" width="350" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                     </div>
@@ -70,9 +71,8 @@
 <footer>
     <p class="m-4">&copy; Copyright Karan Sharma; Portfolio 2.0.</p>
 </footer>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+   
 </body>
 </html>
