added hover effects

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="row">
         <div class="col-3">
             <a href="https://github.com/karan0550
-" target="_blank" aria-label="Github"><i class="fa-brands fa-github" style="font-size: xxx-large; color: white;"></i></a>
+" target="_blank" aria-label="Github"><i class="nav-icons fa-brands fa-github"></i></a>
         </div>
         <div class="col-3">
             <a href="https://www.linkedin.com/in/karan-sharma-50a9161ab
-" target="_blank" aria-label="Linkedin"><i class="fa-brands fa-linkedin" style="font-size: xxx-large; color: white;"></i></a>
+" target="_blank" aria-label="Linkedin"><i class="nav-icons fa-brands fa-linkedin"></i></a>
         </div>
     </div>
 </div>
